// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works 1`] = `
Object {
  "payload": Object {
    "all": Object {
      "config": Object {
        "text": "<div>
      <div style={{
        position: 'relative',
        width: '100%',
        display: 'block'
      }}>
        <table border=\\"1\\" style={{marginRight: '20px',
        position: 'relative',
        whiteSpace: 'normal',
        float: 'center',
        display: 'inline-block'}}>
          <thead>
            <tr>
              <th></th>
              <th>train</th> <th>drag</th> <th>wave</th> <th>jump</th>
            </tr>
          </thead>
          <tbody>
            <tr key=train>
        <td>train</td>
        <td>1</td> <td>0</td> <td>0</td> <td>1</td>
        </tr> <tr key=drag>
        <td>drag</td>
        <td>0</td> <td>0</td> <td>0</td> <td>1</td>
        </tr> <tr key=wave>
        <td>wave</td>
        <td>0</td> <td>0</td> <td>0</td> <td>0</td>
        </tr> <tr key=jump>
        <td>jump</td>
        <td>1</td> <td>0</td> <td>0</td> <td>0</td>
        </tr>
          </tbody>
        </table>
        <table border=\\"1\\" style={{marginRight: '20px',
        position: 'relative',
        whiteSpace: 'normal',
        float: 'center',
        display: 'inline-block'}}>
          <thead>
            <tr>
              <th></th>
              <th>train</th> <th>drag</th> <th>wave</th> <th>jump</th>
            </tr>
          </thead>
          <tbody>
            <tr key=train>
        <td>train</td>
        <td>0</td> <td>2</td> <td>0</td> <td>0</td>
        </tr> <tr key=drag>
        <td>drag</td>
        <td>0</td> <td>0</td> <td>0</td> <td>0</td>
        </tr> <tr key=wave>
        <td>wave</td>
        <td>0</td> <td>0</td> <td>0</td> <td>0</td>
        </tr> <tr key=jump>
        <td>jump</td>
        <td>0</td> <td>0</td> <td>0</td> <td>0</td>
        </tr>
          </tbody>
        </table>
      </div>
      <div>
        <p>0 group(s) did not complete the second activity.</p>
        <p>1 group(s) did not complete the third activity.</p>
      </div>
    </div>
    ",
      },
      "data": Object {},
    },
  },
  "structure": "all",
}
`;

exports[`works twice 1`] = `
Object {
  "payload": Object {
    "all": Object {
      "config": Object {
        "text": "<div>
      <div style={{
        position: 'relative',
        width: '100%',
        display: 'block'
      }}>
        <table border=\\"1\\" style={{marginRight: '20px',
        position: 'relative',
        whiteSpace: 'normal',
        float: 'center',
        display: 'inline-block'}}>
          <thead>
            <tr>
              <th></th>
              <th>plane</th> <th>automotive</th> <th>swimming</th> <th>train</th>
            </tr>
          </thead>
          <tbody>
            <tr key=plane>
        <td>plane</td>
        <td>0</td> <td>0</td> <td>0</td> <td>2</td>
        </tr> <tr key=automotive>
        <td>automotive</td>
        <td>0</td> <td>0</td> <td>0</td> <td>0</td>
        </tr> <tr key=swimming>
        <td>swimming</td>
        <td>0</td> <td>0</td> <td>1</td> <td>0</td>
        </tr> <tr key=train>
        <td>train</td>
        <td>0</td> <td>0</td> <td>1</td> <td>0</td>
        </tr>
          </tbody>
        </table>
        <table border=\\"1\\" style={{marginRight: '20px',
        position: 'relative',
        whiteSpace: 'normal',
        float: 'center',
        display: 'inline-block'}}>
          <thead>
            <tr>
              <th></th>
              <th>train</th> <th>plane</th> <th>automotive</th> <th>swimming</th>
            </tr>
          </thead>
          <tbody>
            <tr key=train>
        <td>train</td>
        <td>2</td> <td>0</td> <td>0</td> <td>0</td>
        </tr> <tr key=plane>
        <td>plane</td>
        <td>0</td> <td>0</td> <td>0</td> <td>0</td>
        </tr> <tr key=automotive>
        <td>automotive</td>
        <td>0</td> <td>0</td> <td>0</td> <td>0</td>
        </tr> <tr key=swimming>
        <td>swimming</td>
        <td>0</td> <td>0</td> <td>0</td> <td>2</td>
        </tr>
          </tbody>
        </table>
      </div>
      <div>
        <p>2 group(s) did not complete the second activity.</p>
        <p>2 group(s) did not complete the third activity.</p>
      </div>
    </div>
    ",
      },
      "data": Object {},
    },
  },
  "structure": "all",
}
`;
